cmake_minimum_required(VERSION 3.16)
project(InferNeto)
set(CMAKE_CXX_STANDARD 17)
find_package(benchmark REQUIRED)
find_package(OpenMP REQUIRED)
find_package(glog REQUIRED)
find_package(BLAS REQUIRED)
find_package(LAPACK REQUIRED)
find_package(GTest REQUIRED)
include_directories(${EIGEN3_INCLUDE_DIRS})

set(link_lib glog::glog GTest::gtest)
if(!WIN32)
    set(link_lib "${link_lib} pthread")
endif()
set(link_math_lib  ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
aux_source_directory(./test/tensor TEST_TENSOR)
aux_source_directory(./test/graph TEST_GRAPH)
aux_source_directory(./core/data/cpu CPU_TENSOR_SOURCE)
aux_source_directory(./core/infer/pnnx PNNX_SOURCE)
aux_source_directory(./core/infer/ INFER_SOURCE)
aux_source_directory(./core/node/abstract NODE_ABSTRACT_SOURCE)
aux_source_directory(./core/node/details NODE_DETAILS_SOURCE)
add_executable(InferNeto main.cpp ${TEST_TENSOR} ${TEST_GRAPH} ${CPU_TENSOR_SOURCE} ${PNNX_SOURCE} ${INFER_SOURCE} ${NODE_ABSTRACT_SOURCE} ${NODE_DETAILS_SOURCE})

target_link_libraries(InferNeto ${link_lib} ${link_math_lib} OpenMP::OpenMP_CXX)

target_include_directories(InferNeto PUBLIC ${glog_INCLUDE_DIR})
target_include_directories(InferNeto PUBLIC ${GTest_INCLUDE_DIR})
target_include_directories(InferNeto PUBLIC ./core)
enable_testing()